force-app/main/default/objects/CountryAndStateNames__c/CountryAndStateNames__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Country And State Names</description>
    <label>Country And State Names</label>
</CustomObject>