force-app/main/default/objects/CountryAndStateNames__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Either Country Code oe State Code</description>
    <label>Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>