force-app/main/default/objects/CountryAndStateNames__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Display Label</description>
    <label>Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>