force-app/main/default/objects/CountryAndStateNames__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Either Country Name or State Name</description>
    <label>Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>