force-app/main/default/objects/CountryAndStateNames__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Country Or State Names</description>
    <inlineHelpText>Country Or State Names</inlineHelpText>
    <label>Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>